add builtins | Echo to Fix and create parser | go for Exec

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "minishell.h": "c",
-        "algorithm": "c"
+        "algorithm": "c",
+        "builtins.h": "c"
     }
 }
