--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "minishell.h": "c",
         "algorithm": "c",
         "parser.h": "c",
-        "exec.h": "c"
+        "exec.h": "c",
+        "libft.h": "c"
     }
 }
