first tree without () and <> <<>>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,11 @@
         "algorithm": "c",
         "parser.h": "c",
         "exec.h": "c",
-        "libft.h": "c"
+        "libft.h": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c",
+        "ranges": "c",
+        "span": "c"
     }
 }
