--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
         "string": "c",
         "string_view": "c",
         "ranges": "c",
-        "span": "c"
+        "span": "c",
+        "curses.h": "c",
+        "convention.h": "c",
+        "*.tcc": "c"
     }
 }
