--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,8 @@
         "redirection.h": "c",
         "core_data.h": "c",
         "readline.h": "c",
-        "cerrno": "c"
+        "cerrno": "c",
+        "error.h": "c",
+        "ms_error.h": "c"
     }
 }
