refacto, start safe mode, history change. KIKI dont work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,27 @@
 {
     "files.associations": {
-        "minishell.h": "c",
-        "algorithm": "c",
-        "parser.h": "c",
-        "exec.h": "c",
-        "libft.h": "c",
-        "cstdlib": "c",
-        "array": "c",
-        "string": "c",
-        "string_view": "c",
-        "ranges": "c",
-        "span": "c",
-        "curses.h": "c",
-        "convention.h": "c",
-        "*.tcc": "c",
-        "ms_builtins.h": "c",
-        "stdio.h": "c",
-        "redirection.h": "c",
-        "core_data.h": "c",
-        "readline.h": "c",
-        "cerrno": "c",
-        "error.h": "c",
-        "ms_error.h": "c"
-    }
+		"minishell.h": "c",
+		"algorithm": "c",
+		"parser.h": "c",
+		"exec.h": "c",
+		"libft.h": "c",
+		"cstdlib": "c",
+		"array": "c",
+		"string": "c",
+		"string_view": "c",
+		"ranges": "c",
+		"span": "c",
+		"curses.h": "c",
+		"convention.h": "c",
+		"*.tcc": "c",
+		"ms_builtins.h": "c",
+		"stdio.h": "c",
+		"redirection.h": "c",
+		"core_data.h": "c",
+		"readline.h": "c",
+		"cerrno": "c",
+		"error.h": "c",
+		"ms_error.h": "c",
+		"environement.h": "c"
+	}
 }
