--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "libft"]
 	path = libft
 	url = https://github.com/Luma-3/libft.git
+[submodule "libs/libft"]
+	path = libs/libft
+	url = https://github.com/Luma-3/libft.git
+[submodule "libs/stackft"]
+	path = libs/stackft
+	url = https://github.com/Luma-3/StackFT.git
