* marche mais bons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
 		"cerrno": "c",
 		"error.h": "c",
 		"ms_error.h": "c",
-		"environement.h": "c"
+		"environement.h": "c",
+		"stackft.h": "c"
 	}
 }
